; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_pcnt.c_pcnt_intr_disable.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_pcnt.c_pcnt_intr_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@PCNT_UNIT_MAX = common dso_local global i64 0, align 8
@PCNT_UNIT_ERR_STR = common dso_local global i32 0, align 4
@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4
@pcnt_spinlock = common dso_local global i32 0, align 4
@PCNT_CNT_THR_EVENT_U0_INT_ENA_S = common dso_local global i64 0, align 8
@PCNT = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pcnt_intr_disable(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @PCNT_UNIT_MAX, align 8
  %5 = icmp slt i64 %3, %4
  %6 = zext i1 %5 to i32
  %7 = load i32, i32* @PCNT_UNIT_ERR_STR, align 4
  %8 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  %9 = call i32 @PCNT_CHECK(i32 %6, i32 %7, i32 %8)
  %10 = call i32 @PCNT_ENTER_CRITICAL(i32* @pcnt_spinlock)
  %11 = load i64, i64* @PCNT_CNT_THR_EVENT_U0_INT_ENA_S, align 8
  %12 = load i64, i64* %2, align 8
  %13 = add nsw i64 %11, %12
  %14 = call i32 @BIT(i64 %13)
  %15 = xor i32 %14, -1
  %16 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @PCNT, i32 0, i32 0, i32 0), align 4
  %17 = and i32 %16, %15
  store i32 %17, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @PCNT, i32 0, i32 0, i32 0), align 4
  %18 = call i32 @PCNT_EXIT_CRITICAL(i32* @pcnt_spinlock)
  %19 = load i32, i32* @ESP_OK, align 4
  ret i32 %19
}

declare dso_local i32 @PCNT_CHECK(i32, i32, i32) #1

declare dso_local i32 @PCNT_ENTER_CRITICAL(i32*) #1

declare dso_local i32 @BIT(i64) #1

declare dso_local i32 @PCNT_EXIT_CRITICAL(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
